--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
     "react": "^16.8.6",
+    "react-confirm-box": "^1.2.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
