--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "dayjs": "^1.10.7",
     "react": "^16.8.6",
+    "react-bootstrap": "^2.0.3",
     "react-confirm-box": "^1.2.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^6.0.2",
