--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,6 +16,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^2.0.3",
     "react-confirm-box": "^1.2.0",
+    "react-csv": "^2.0.3",
     "react-dom": "^16.8.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
