calendar and styles

--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "dayjs": "^1.10.7",
+    "moment": "^2.29.1",
     "react": "^16.8.6",
     "react-bootstrap": "^2.0.3",
     "react-confirm-box": "^1.2.0",
     "react-csv": "^2.0.3",
     "react-dom": "^16.8.6",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-table-v6": "^6.8.6",
