--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "dayjs": "^1.10.7",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^16.8.6",
     "react-bootstrap": "^2.0.3",
@@ -26,6 +27,7 @@
     "react-scripts": "4.0.3",
     "react-table-v6": "^6.8.6",
     "reactjs-popup": "^2.0.5",
+    "recharts": "^2.1.8",
     "web-vitals": "^1.0.1"
   },
   "engines": {
