--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-csv": "^2.0.3",
     "react-dom": "^16.8.6",
     "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-table-v6": "^6.8.6",
